MediaCapabilities fails to detect hardware support for certain H264 profiles because avcC box is encoded incorrectly.
Categories
(Core :: Audio/Video: Playback, defect, P3)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox100 | --- | fixed |
People
(Reporter: Zaggy1024, Assigned: Zaggy1024)
References
(Blocks 1 open bug)
Details
Attachments
(1 file)
|
Bug 1758605 - Fix MediaCapabilities not detecting hardware support for certain H264 profiles. r=alwu
48 bytes,
text/x-phabricator-request
|
Details | Review |
User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:99.0) Gecko/20100101 Firefox/99.0
Steps to reproduce:
Query H264 High Profile (100, 0x64) support via MediaCapabilities:
await navigator.mediaCapabilities.decodingInfo({type: 'file', video: {'contentType': 'video/mp4;codecs=avc1.64001E', width: 1280, height: 720, framerate: 30, bitrate: 1000000}});
Actual results:
The query returns powerEfficient=false when hardware decoding is supported.
Note: The result of the query will be affected by the resolution due to the way the box is decoded. 1280x720 fails, 640x360 and 1920x1080 succeed.
Expected results:
All queries for H264 High Profile hardware support should succeed.
Reading of fields that are not written by CreateExtraData occurs on this line:
https://searchfox.org/mozilla-central/source/dom/media/platforms/agnostic/bytestreams/H264.cpp#571
They should be written after this line:
https://searchfox.org/mozilla-central/source/dom/media/platforms/agnostic/bytestreams/H264.cpp#1279
Comment 2•4 years ago
|
||
The Bugbug bot thinks this bug should belong to the 'Core::Audio/Video: Playback' component, and is moving the bug to that component. Please revert this change in case you think the bot is wrong.
Updated•4 years ago
|
Updated•4 years ago
|
Added two missing flags to H264::CreateExtraData that are required to parse the avcC box correctly.
Depends on D140148
Updated•4 years ago
|
Comment 5•4 years ago
|
||
| bugherder | ||
Description
•