Bug 1758605 - Fix MediaCapabilities not detecting hardware support for certain H264 profiles. r=alwu

Added two missing flags to H264::CreateExtraData that are required to parse the avcC box correctly.

Differential Revision: https://phabricator.services.mozilla.com/D140695